Disable swipe up because it interferes with scrolling and try to fix zoom on iOS again
git-svn-id: https://svn-server/svn/maayanlab/trunk/Enrichr@1630 998562b1-c221-4fe5-b3d3-2fd2107a5f19

--- a/src/main/webapp/black-widow.css
+++ b/src/main/webapp/black-widow.css
@@ -15,8 +15,8 @@ a {
 	text-decoration: none;
 }
 
-input, textarea {
-	font-size: 1em;
+input[type='text'], textarea {
+	font-size: 16px;
 }
 
 textarea:focus, input:focus {
